<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_preview_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/playback_widget_preview_track"
        android:textColor="@android:color/system_neutral1_900"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/playback_widget_preview_detail"
        android:textColor="@android:color/system_neutral2_700"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/playback_widget_dislike"
            android:padding="12dp"
            android:src="@drawable/ic_widget_dislike"
            android:tint="@android:color/system_accent1_700" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/playback_widget_previous"
            android:padding="12dp"
            android:src="@drawable/ic_widget_previous"
            android:tint="@android:color/system_accent1_700" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/playback_widget_play"
            android:padding="10dp"
            android:src="@drawable/ic_widget_play"
            android:tint="@android:color/system_accent1_700" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/playback_widget_next"
            android:padding="12dp"
            android:src="@drawable/ic_widget_next"
            android:tint="@android:color/system_accent1_700" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/playback_widget_like"
            android:padding="12dp"
            android:src="@drawable/ic_widget_like"
            android:tint="@android:color/system_accent1_700" />
    </LinearLayout>
</LinearLayout>
